<resources>
    <string name="app_name">Hacela</string>
    <string name="app_code">https://f8mhr.app.goo.gl</string>


    <!--facebook-->
    <string name="facebook_app_id">179544296012408</string>
    <string name="fb_login_protocol_scheme">fb179544296012408</string>

    <!--twitter-->
    <string name="twitter_consumer_key" translatable="false">pTpB7cAYwf97ZvHeZNhiC2fjs</string>
    <string name="twitter_consumer_secret" translatable="false">5NA95Doqga0JKGPIwUr7HN65kadYVHB2dEDNvsVCDPLRFavZ08</string>


    <string name="sign_up_with">Sign up with</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_twitter">Sign up with Twitter</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_up_ex">Sign Up!</string>
    <string name="sign_out">Sign out</string>

    <string name="or">OR</string>
    <string name="image_default_content_description">image default content description</string>
    <string name="welcome">Welcome</string>
    <string name="login_with">Login with</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="display_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <!--bottom nav titles-->
    <string name="bottomnav_title_0">Profile</string>
    <string name="bottomnav_title_1">Home</string>
    <string name="bottomnav_title_2">Account</string>
    <string name="bottomnav_title_3">Chat</string>

    <string name="profile_completion">Profile Completion (70%)</string>
    <string name="my_balance_n_72_000">My Balance \n Ksh 0</string>
    <string name="mavuno_balance_n_ksh_152_000">Mavuno Balance \n Ksh 152,000</string>
    <string name="personal_account">PERSONAL ACCOUNT</string>
    <string name="account">ACCOUNTS</string>
    <string name="profile">Profile</string>
    <string name="hacela_profile">Hacela Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="location">Location</string>
    <string name="id_number">ID Number</string>
    <string name="profession">Profession</string>
    <string name="type_of_business">Type of Business</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>
    <string name="income">Income</string>

    <!--income ranges-->
    <string name="below_10k">Below 10k</string>
    <string name="between_10k_20k">Between 10K - 20k</string>
    <string name="between_20k_40k">Between 20K - 40k</string>
    <string name="between_40k_90k">Between 40K - 90k</string>
    <string name="b_above_100k">Above 100k</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="permission_rationale_location">Hacela would like to know your location inorder to personalise your experience</string>
    <string name="permission_location_denied_explanation">You have not granted location permission to Hacela.  Personalize your experience with Hacela</string>
    <string name="settings">settings</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid latitude or longitude used</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="this_will_be_the_number_you">This will be the number you send and receive money.</string>
    <string name="change_Phone_Number">Change Phone Number</string>
    <string name="set_Phone_Number">Set your Phone Number</string>
    <string name="phone_number_07xxxxxxxxxx">Phone Number (07xxxxxxxxxx)</string>
    <string name="change">Change</string>


    <!-- Types professions i could think of in 5 minutes -->
    <string-array name="profession_categories">
        <!--unique-->
        <item>Business</item>

        <item>Teacher</item>
        <item>Laborer</item>
        <item>HairDresser</item>
        <item>Tailor</item>
        <item>Broker</item>
        <item>Midwife</item>
        <item>Waiter</item>

        <item>Lawyer</item>
        <item>Engineer</item>
        <item>Paramedic</item>
        <item>Doctor</item>
        <item>Health Professional</item>
        <item>Solder</item>
        <item>Librarian</item>
        <item>Optician</item>
        <item>Architect</item>
        <item>Technician</item>

        <item>Accountant</item>
        <item>Auditor</item>
        <item>Programmer</item>
        <item>Designer</item>
        <item>Technician</item>
        <item>Mechanic</item>
        <item>Plumber</item>
        <item>Police Officer</item>

        <item>Student</item>

    </string-array>

    <string-array name="business_categories">
        <item>Wholesaler</item>
        <item>Shopkeeper</item>
        <item>Casual</item>
    </string-array>

    <string-array name="income_range">
        <item>Income</item>
        <item>Below 10k</item>
        <item>Between 10K - 20k</item>
        <item>Between 20K - 40k</item>
        <item>Between 40K - 90k</item>
        <item>Above 100k</item>
    </string-array>

    <string-array name="group_admin">
        <item>Chairperson</item>
        <item>Treasurer</item>
        <item>Secretary</item>
    </string-array>

    <string-array name="group_interval">
        <item>Does not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>

        <item>Once Every 2 weeks</item>
        <item>Once Every 2 months</item>
        <item>Once Every 3 months</item>
        <item>Once Every 6 months</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="i_e_group_caption_name">i.e group caption name</string>
    <string name="merry_go_round1">With this type of group, the contribution will financially support of members only</string>
    <string name="merry_go_round2">With this type of group, the contribution will financially support of members at a percentage of their contribution   Also they set aside money for projects and savings</string>
    <string name="group_full_name">Group Full Name</string>
    <string name="group_display_name">Group Display Name</string>
    <string name="enable_penalty_for_late_payment">Enable Penalty for late payment</string>
    <string name="penalty_amount_ksh">Penalty Amount (Ksh)</string>

    <!--App normal invitation-->
    <string name="invitation_title">Join Hacela</string>
    <string name="invitation_message">Manage and control all your chama activities from your phone</string>
    <string name="invitation_deep_link">https://f8mhr.app.goo.gl/hacela</string>
    <string name="invitation_custom_image">https://user-images.githubusercontent.com/22516895/40451662-fe4f8628-5ee7-11e8-8277-befddbe23201.png</string>
    <string name="invitation_cta">Join</string>

    <!--App to group invitation-->
    <string name="hacela_deep_link">https://f8mhr.app.goo.gl</string>
    <string name="hacela_group_default_link">https://hacela.com/groupinvite</string>
    <string name="membership_request">Membership Request</string>

    <!-- transitions and group control strings -->
    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="transition_list" translatable="false">list</string>
    <string name="group_description">Group Description</string>
    <string name="edit_amount_to_be_contributed_by_each_member">Edit Amount to be contributed by each member</string>
    <string name="select_contribution_intervals">Select contribution intervals</string>
    <string name="edit_savings_in_a_single_cycle">Edit Savings in a single cycle</string>
    <string name="savings_ksh">Savings (Ksh)</string>
    <string name="edit_payout_in_a_single_cycle">Edit Payout in a single cycle</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="pay">Pay</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="withdraw">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="kes_0">KES 0/-</string>

    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="status_pending">Pending</string>
    <string name="status_completed">Completed</string>
    <string name="status_failed">Failed</string>
    <string name="pay_via">Pay Via</string>
    <string name="contribute">Contribute</string>
    <string name="deposit">Deposit</string>
    <string name="stats">Stats</string>
</resources>
