<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profileCore.DetailsEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detailsedit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Edit Profile"
        app:titleTextColor="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llbg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/ScrollViewconstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsedit_toolbar">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detailsedit_profile_image"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/removable_pic"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ScrollViewconstraint"
                    tools:src="@drawable/removable_pic" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:src="#2d55074a"
                    android:visibility="visible"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ScrollViewconstraint" />


                <ImageButton
                    android:id="@+id/detailsedit_btn_changeimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                    app:layout_constraintStart_toStartOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView"
                    app:srcCompat="@drawable/ic_camera" />

                <TextView
                    android:id="@+id/detailsedit_tv_changeimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/change_photo"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                    app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                    app:layout_constraintStart_toStartOf="@+id/circleImageView"
                    app:layout_constraintTop_toBottomOf="@+id/detailsedit_btn_changeimg"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/padding_normal"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/details_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:hint="@string/display_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/details_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/details_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/details_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:hint="@string/location"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_normal">

                    <TextView
                        android:id="@+id/tv_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/detailsedit_radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@id/tv_gender"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="@dimen/spacing_micro"
                        android:layout_marginTop="@dimen/padding_normal"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/padding_normal"
                        android:paddingStart="@dimen/spacing_micro">

                        <RadioButton
                            android:id="@+id/details_radiomale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:paddingEnd="@dimen/padding_normal"
                            android:paddingStart="@dimen/padding_normal"
                            android:text="@string/radio_male" />

                        <RadioButton
                            android:id="@+id/details_radiofemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/padding_normal"
                            android:paddingStart="@dimen/padding_normal"
                            android:text="@string/radio_female" />
                    </RadioGroup>
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/hacela_profile"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/details_tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Income"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="3dp"
                    android:background="#717171" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <AutoCompleteTextView
                        android:id="@+id/details_idnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id_number"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:id="@+id/details_tv_profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="Profession"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="3dp"
                    android:background="#717171" />


                <TextView
                    android:id="@+id/details_tv_typeofbiz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="Type of Business"
                    android:visibility="gone"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/details_tv_typeofbiz_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/padding_normal"
                    android:layout_marginTop="3dp"
                    android:background="#717171" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_normal"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:layout_marginBottom="@dimen/padding_normal">

                    <Button
                        android:id="@+id/details_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_normal"
                        android:layout_marginEnd="@dimen/padding_normal"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary"
                        android:paddingStart="@dimen/padding_normal"
                        android:paddingEnd="@dimen/padding_normal"
                        android:background="@drawable/button_cancel_background"
                        style="?android:attr/buttonBarButtonStyle"
                        />

                    <Button
                        android:id="@+id/details_btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/padding_normal"
                        android:layout_marginStart="@dimen/padding_normal"
                        android:text="@string/save"
                        android:textColor="@android:color/white"
                        android:paddingStart="@dimen/padding_normal"
                        android:paddingEnd="@dimen/padding_normal"
                        android:background="@drawable/button_save_background"
                        style="?android:attr/buttonBarButtonStyle"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
